# deepstream_python_apps

./: .gitmodules  FAQ.md  HOWTO.md  LICENSE  README.md  THIRD_PARTY_LICENSE
apps/: README
apps/common/: FPS.py  bus_call.py  is_aarch_64.py  platform_info.py  utils.py
apps/deepstream-custom-binding-test/: README  deepstream_custom_binding_test.py
apps/deepstream-demux-multi-in-multi-out/: README  deepstream_demux_multi_in_multi_out.py  ds_demux_pgie_config.txt
apps/deepstream-imagedata-multistream/: README  deepstream_imagedata-multistream.py  dstest_imagedata_config.txt
apps/deepstream-imagedata-multistream-cupy/: README  deepstream_imagedata-multistream_cupy.py  dstest_imagedata_cupy_config.txt
apps/deepstream-imagedata-multistream-redaction/: README  config_infer_primary_peoplenet.txt  deepstream_imagedata-multistream_redaction.py
apps/deepstream-nvdsanalytics/: README  config_nvdsanalytics.txt  config_nvdsanalytics_c02.txt  config_tracker_NvDCF_perf.yml  deepstream_nvdsanalytics.py  dsnvanalytics_pgie_config.txt  dsnvanalytics_tracker_config.txt
apps/deepstream-opticalflow/: README  deepstream-opticalflow.py
apps/deepstream-preprocess-test/: README  config_preprocess.txt  deepstream_preprocess_test.py  dstest1_pgie_config.txt
apps/deepstream-rtsp-in-rtsp-out/: README  deepstream_test1_rtsp_in_rtsp_out.py  dstest1_pgie_config.txt
apps/deepstream-segmask/: README  deepstream_segmask.py  dstest_segmask_config.txt
apps/deepstream-segmentation/: README  deepstream_segmentation.py  dstest_segmentation_config_industrial.txt  dstest_segmentation_config_semantic.txt
apps/deepstream-ssd-parser/: README  custom_parser_guide.md  deepstream_ssd_parser.py  dstest_ssd_nopostprocess.txt  nms.py  ssd_parser.py
apps/deepstream-test1/: README  deepstream_test_1.py  dstest1_pgie_config.txt
apps/deepstream-test1-rtsp-out/: README  deepstream_test1_rtsp_out.py  dstest1_pgie_config.txt
apps/deepstream-test1-usbcam/: README  deepstream_test_1_usb.py  dstest1_pgie_config.txt
apps/deepstream-test2/: README  config_tracker_NvDCF_perf.yml  deepstream_test_2.py  dstest2_pgie_config.txt  dstest2_sgie1_config.txt  dstest2_sgie2_config.txt  dstest2_sgie3_config.txt  dstest2_tracker_config.txt  tracker_config.yml
apps/deepstream-test3/: README  config.pbtxt  config_infer_primary_peoplenet.txt  config_triton_grpc_infer_primary_peoplenet.txt  config_triton_infer_primary_peoplenet.txt  deepstream_test_3.py  dstest3_pgie_config.txt
apps/deepstream-test4/: README  cfg_amqp.txt  cfg_azure.txt  cfg_kafka.txt  cfg_mqtt.txt  cfg_redis.txt  deepstream_test_4.py  dstest4_msgconv_config.txt  dstest4_pgie_config.txt
apps/runtime_source_add_delete/: README  config_tracker_NvDCF_perf.yml  deepstream_rt_src_add_del.py  dstest_pgie_config.txt  dstest_sgie1_config.txt  dstest_sgie2_config.txt  dstest_sgie3_config.txt  dstest_tracker_config.txt  tracker_config.yml
bindings/: BINDINGSGUIDE.md  CMakeLists.txt  CUSTOMUSERMETAGUIDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/docstrings/: analyticsmetadoc.h  customdoc.h  functionsdoc.h  gstnvdsmetadoc.h  meta360doc.h  nvbufsurfacedoc.h  nvdsinferdoc.h  nvdsmetadoc.h  nvosddoc.h  opticalflowdoc.h  pydocumentation.h  schemadoc.h  trackermetadoc.h  utilsdoc.h
bindings/include/: pyds.hpp  utils.hpp
bindings/include/bind/: bind_string_property_definitions.h  bindanalyticsmeta.hpp  bindfunctions.hpp  bindgstnvdsmeta.hpp  bindmeta360.hpp  bindnvbufsurface.hpp  bindnvdsinfer.hpp  bindnvdsmeta.hpp  bindnvosd.hpp  bindopticalflow.hpp  bindschema.hpp  bindtrackermeta.hpp
bindings/include/nvds/: nvds_360d_meta.h
bindings/packaging/: setup.py
bindings/qemu_docker/: ubuntu-cross-aarch64.Dockerfile
bindings/src/: bindanalyticsmeta.cpp  bindfunctions.cpp  bindgstnvdsmeta.cpp  bindmeta360.cpp  bindnvbufsurface.cpp  bindnvdsinfer.cpp  bindnvdsmeta.cpp  bindnvosd.cpp  bindopticalflow.cpp  bindschema.cpp  bindtrackermeta.cpp  pyds.cpp  utils.cpp
bindings/src/custom_binding/: bindcustom.cpp
bindings/src/custom_binding/include/: bindcustom.hpp  custom_data.hpp
docs/: README.md  bindings_file_list.txt  conf.py  custom.css  ex.py  index.rst  parse_bindings.py  version_api.rst
docs/PYTHON_API/Methods/: methodsdoc.rst  pymethods.rst
notebooks/: deepstream_launchpad.ipynb  deepstream_test_1.ipynb  deepstream_test_4.ipynb
notebooks/configs/: config_tracker_NvDCF_perf.yml  dslaunchpad_pgie_config.txt  dslaunchpad_sgie1_config.txt  dslaunchpad_sgie2_config.txt  dslaunchpad_tracker_config.txt
tests/common/: frame_iterator.py  generic_pipeline.py  pipeline_fakesink.py  pipeline_fakesink_tracker.py  pipeline_filesink.py  pipeline_nveglglessink.py  tracker_utils.py  utils.py
tests/integration/: README.md  deepstream_demo.py  ds_base_config.txt  ds_pgie_config.txt  ds_sgie1_config.txt  ds_sgie2_config.txt  ds_sgie3_config.txt  ds_tracker_config.txt  test.py  tracker_config.yml
tests/testcommon/: frame_iterator.py  generic_pipeline.py  pipeline_fakesink.py  pipeline_fakesink_tracker.py  pipeline_filesink.py  pipeline_nveglglessink.py  tracker_utils.py  utils.py
